test/bad/ex3.cb
// tail expression of loop has to be of type unit
def main() {
    let x = loop {
        3
    }
}
